# SpatialDE

./: .gitattributes  .gitignore  .pre-commit-config.yaml  FaST-GP.py  LICENSE  README.ipynb  README.md  README.rst  data_simulation.py  full_st_mob_analysis.py  gpy_sim_comparison.py  pyproject.toml  setup.cfg  split_data.py  test-FaST-GP.py  visualization.py
.github/workflows/: docs.yml  pre-commit.yml
Analysis/: rerun_all.sh
Analysis/BMDC Pseudotime/: Antiviral analysis.ipynb  DE Analsysis.ipynb
Analysis/BreastCancer/: Alternative explanatory factors.ipynb  Automatic expression histology.ipynb  BC_MS_results.csv  BC_final_results.csv  BC_gProfiler.csv  BC_sample_info.csv  Breast Cancer Tissue Analysis.ipynb  CB_final_results.csv  Clustering analysis.ipynb  Compare to Rank-normalisation.ipynb  Spatial Shuffling.ipynb  Standard Errors.ipynb  spatial_BC_analysis.py
Analysis/Comparison/: Compare performance.ipynb  Snakefile  gpy_sim_comparison.py  performance.csv  run.sh  run_spatialde.py  run_stan.py  simulate_data.py
Analysis/Frog/: Frog Development Analysis.ipynb  Frog_MS_results.csv  Frog_final_results.csv  Frog_sample_info.csv  Initial frog time-DE.ipynb  temporal_Frog_analysis.py
Analysis/MERFISH/: MERFISH Analysis.ipynb  (+4 more)
Python-module/: README.rst  setup.py
SpatialDE/: __init__.py  aeh.py  de_test.py  dp_hmrf.py  gaussian_process.py  io.py  kernels.py  svca.py
Stan-model/: AltModel.stan  NullModel.stan  build_model.py
docs/: .gitignore
gp_fits/: Snakefile  fit_gps.py  gp_regression.stan  notebook.Rmd  pystan_version.py
limix_based/: setup.py
(+144 files in other folders)
