[metadata]
name = SpatialDE
url = https://github.com/ilia-kats/SpatialDE
description = Spatial and Temporal DE test
long_description = file: README.rst
author = Ilia Kats, Valentine Svensson
author_email = i.kats@dkfz-heidelberg.de, valentine@nxn.se
license = MIT

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    numpy
    scipy >= 1.0
    pandas >= 1.0
    matplotlib >= 3.0
    tqdm
    gpflow >= 2.0
    tensorflow >= 2.3
    tensorflow-probability >= 0.10
    anndata >= 0.7
    NaiveDE
    h5py

[options.extras_require]
docs =
    sphinx >= 4.0
    sphinx-autodoc-typehints
    sphinx-rtd-theme
